vlib/v/parser/tests/register_imported_enum.vv
import net.http { Method }
enum Method { foo bar }
